tests/reference/asr-vec_01-66ac423.stderr
semantic error: 'f64[9217]' object does not support item assignment
  --> tests/../integration_tests/vec_01.py:10:9
   |
10 |         b[i] = 5.0
   |         ^^^^^^^^^^ 
